crates/diffguard-testkit/tests/snapshots/snapshot_tests__rust_focused_config.snap
---
source: crates/diffguard-testkit/tests/snapshot_tests.rs
expression: json
---
{
  "defaults": {
    "base": "origin/main",
    "diff_context": 0,
    "fail_on": "error",
    "head": "HEAD",
    "max_findings": 100,
    "scope": "added"
  },
  "rule": [
    {
      "exclude_paths": [
        "**/tests/**"
      ],
      "id": "rust.no_unwrap",
      "ignore_comments": true,
      "ignore_strings": true,
      "languages": [
        "rust"
      ],
      "message": "Avoid unwrap in production code",
      "paths": [
        "**/*.rs"
      ],
      "patterns": [
        "\\.unwrap\\(",
        "\\.expect\\("
      ],
      "severity": "error"
    },
    {
      "exclude_paths": [
        "**/tests/**",
        "**/examples/**"
      ],
      "id": "rust.no_dbg",
      "ignore_comments": true,
      "ignore_strings": true,
      "languages": [
        "rust"
      ],
      "message": "Remove debug macros before merging",
      "paths": [
        "**/*.rs"
      ],
      "patterns": [
        "\\bdbg!\\(",
        "\\bprintln!\\("
      ],
      "severity": "warn"
    }
  ]
}
