crates/diffguard-testkit/tests/snapshots/snapshot_tests__simple_addition_diff.snap
---
source: crates/diffguard-testkit/tests/snapshot_tests.rs
expression: diff
---
"diff --git a/src/lib.rs b/src/lib.rs\nindex 0000000..1111111 100644\n--- a/src/lib.rs\n+++ b/src/lib.rs\n@@ -1,1 +1,2 @@\n fn existing() {}\n+fn new_function() {}\n"
